[package]
name = "gatepays"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.4"
rand = "0.8.5"
jsonwebtoken = "8.1"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
async-trait = "0.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tower = "0.4"